Add Docker, DB seed; enhance BUS/DAO logic
Add Docker support and DB seed: introduce Dockerfile, docker-compose.yml, .dockerignore and database/e2e_seed.sql plus documentation updates (HUONG_DAN_CHAY.md, VERIFICATION_CHECKLIST.md) explaining Docker/compose usage and environment overrides. Add small utilities and resources: SimpleDocumentListener, DolechTable; update HibernateUtil. Implement data validation, normalization and business logic hardening: BangQuyDoiBUS (validation, normalized keys, quyDoiNoiSuy interpolation, lastError), NganhToHopBUS (validation, normalization, subject-flag logic, previewDoLech, uniqueness checks), ToHopMonBUS (lookup helper and minor formatting). Extend/adjust DAOs with helper queries (getByPhuongThuc, findInterval*, getByTbKeys, existsTbKeysExceptId, getByMaToHop) and consistent transaction rollback formatting. Update entities to widen key lengths and use nullable/boxed types, and add/adjust getters/setters. Overall this commit adds containerization, seed data and refactors validation/lookup logic to improve data integrity and interpolation features.